Cycles fails to bake normal map to a non-manifold mesh #44512

Closed
opened 2015-04-26 00:38:47 +02:00 by Alexander Zubov · 7 comments

{F166860}System Information
Windows 7 Pro 64-bit ; GF 670 GTX

Blender Version
Broken: 2.74 2015-03-31 13:39 Hash: 000dfc0
Worked: not in 2.73 either

Short description of error
I have a high poly mesh (solid) and a low poly mesh (non-manifold). Cycles fails to bake normal map. xNormal bakes it perfectly fine.

Exact steps for others to reproduce the error
Select high poly, then low poly, bake - no normal map will be baked. Here is what it looks like:

https://www.youtube.com/watch?v=3ELfbqYNhU4

.blend file is attached.

{[F166860](https://archive.blender.org/developer/F166860/cycles_fails_normal_baking.blend)}**System Information** Windows 7 Pro 64-bit ; GF 670 GTX **Blender Version** Broken: 2.74 2015-03-31 13:39 Hash: 000dfc0 Worked: not in 2.73 either **Short description of error** I have a high poly mesh (solid) and a low poly mesh (non-manifold). Cycles fails to bake normal map. xNormal bakes it perfectly fine. **Exact steps for others to reproduce the error** Select high poly, then low poly, bake - no normal map will be baked. Here is what it looks like: https://www.youtube.com/watch?v=3ELfbqYNhU4 .blend file is attached.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @motorsep

Added subscriber: @motorsep

This issue was referenced by e1ed47eb5b

This issue was referenced by e1ed47eb5b6ec3f1501bed0b34bfa7894acee022

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e1ed47eb5b.

Closed by commit e1ed47eb5b.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note, this failed because the high poly object was negatively scaled.

Fixed in master, but you can workaround in the release by not using negative scales.

Note, this failed because the high poly object was negatively scaled. Fixed in master, but you can workaround in the release by not using negative scales.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44512
No description provided.