Fix T44512: Cycles fails normal bake /w scale flip