source/blender/render/extern/include/RE_bake.h
@@ -61,10 +61,10 @@ typedef struct BakeHighPolyData {
 	struct ModifierData *tri_mod;
 	struct Mesh *me;
 	char restrict_flag;
+	bool is_flip_object;
 
 	float obmat[4][4];
 	float imat[4][4];
-	float rotmat[4][4];
 } BakeHighPolyData;
 
 /* external_engine.c */
